--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,50 @@
 html {
     font-family: 'Open Sans', sans-serif;
+    color: #373a3c;
+}
+
+#sidebar {
+    background-color: rgb(27, 27, 39);
+    width: 300px;
+    height: 100%;
+    position: fixed;
+    padding-top: 30px;
+}
+
+#sidebar h1 {
+    color: white;
+    margin: 32px;
+    text-align: center;
+    font-size: 32px;
+}
+
+.sidebar-container {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    width: 200px;
+}
+
+#sidebar a {
+    font-size: 16px;
+    color: white;
+    text-decoration: none;
+}
+
+#sidebar a:hover {
+    color: #f4ef5e
+}
+
+#sidebar li {
+    padding: 20px;
+
+}
+
+.logo-doceria {
+    width: 100px;
+    height: 100px;
+    display: block;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto
 }
