--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ html {
 }
 
 section {
-    padding-left: 50px;
+    padding-left: 20px;
 }
 
 /* sessão bemvindo */
@@ -86,6 +86,15 @@ section {
 
 }
 
+#sessao-sobre {
+
+    padding-left: 0;
+}
+
+.sessao-content {
+    padding-left: 20px;
+}
+
 #sessao-bemvindo .banner {
     height: 500px;
     background-image: url(../img/banner2.jpg);
@@ -94,11 +103,13 @@ section {
 
 }
 
+
 #sessao-bemvindo h1 {
     margin-top: 40px;
 }
 
-#sessao-bemvindo::after {
+#sessao-bemvindo::after,
+#sessao-sobre::after {
     content: "";
     display: block;
     clear: both;
@@ -107,7 +118,7 @@ section {
 
 .sessao-minibanner {
     width: 350px;
-    height: 500px;
+    height: 470px;
     background-image: url(..//img/banner3.jpg);
     background-position: left;
     background-size: cover;
@@ -120,20 +131,150 @@ section {
     padding-right: 30px;
 }
 
-.sessao-descricao p{
+.sessao-descricao p {
     line-height: 2;
     font-size: 16px;
     margin-bottom: 30px;
     margin-left: 25px;
 }
-.sessao-bemvindo-btn , form input[type=submit]{
+
+.sessao-bemvindo-btn,
+form input[type=submit] {
     background-color: #006599;
     color: white;
-    margin-left:25px;
+    margin-left: 25px;
     padding: 12px 30px;
     cursor: pointer;
     border: none;
 }
-.sessao-bemvindo-btn:hover, form input[type=submit]:hover{
+
+.sessao-bemvindo-btn:hover,
+form input[type=submit]:hover {
     background-color: #2790c6;
+}
+
+#sessao-sobre .sessao-minibanner {
+    float: right;
+    margin-right: 20px;
+    background-image: url(..//img/banner4.jpg);
+}
+
+#sessao-sobre .sessao-descricao {
+    position: absolute;
+    left: 0;
+    width: calc(100% - 400px)
+}
+
+/* galerias */
+
+.banner-galeria {
+    background-position: center;
+    background-size: cover;
+    display: inline-block;
+    height: 200px;
+}
+
+#sessao-doces1,
+#sessao-doces2,
+#sessao-doces3 {
+    padding-right: 20px;
+    margin-bottom: 20px;
+}
+
+.doces1-imgs {
+    width: 18.8%;
+    margin-left: .4%;
+    margin-right: .4%;
+}
+
+#img1 {
+    background-image: url(..//img/galeria1.jpg);
+    margin-left: 0;
+}
+
+#img2 {
+    background-image: url(..//img/galeria2.jpg);
+}
+
+#img3 {
+    background-image: url(..//img/galeria3.jpg);
+}
+
+#img4 {
+    background-image: url(..//img/galeria4.jpg);
+}
+
+#img5 {
+    background-image: url(..//img/galeria5.jpg);
+}
+
+.doces2-imgs {
+    width: 18.8%;
+    margin-left: .4%;
+    margin-right: .4%;
+}
+
+#img6 {
+    background-image: url(..//img/galeria6.jpg);
+    margin-left: 0;
+}
+
+#img7 {
+    background-image: url(..//img/galeria7.jpg);
+}
+
+#img8 {
+    background-image: url(..//img/galeria8.jpg);
+}
+
+.doces3-imgs {
+    width: 18.8%;
+    margin-left: .4%;
+    margin-right: .4%;
+}
+
+#img9 {
+    background-image: url(..//img/galeria9.jpg);
+    margin-left: 0;
+}
+
+#img10 {
+    background-image: url(..//img/galeria10.jpg);
+}
+
+#img11 {
+    background-image: url(..//img/galeria11.jpg);
+}
+
+#img12 {
+    background-image: url(..//img/galeria12.jpg);
+}
+
+/* contato */
+
+#form-contato {
+    width: 500px;
+}
+
+#form-contato input[type=text],
+#form-contato input[type=email],
+#form-contato textarea {
+    display: block;
+    border: 1px solid #006599;
+    padding: 10px;
+    margin-bottom: 20px;
+    width: 100%;
+    font-size: 16px;
+    font-family: 'Open Sans', sans-serif;
+}
+
+footer {
+    height: 100px;
+    padding-top: 150px;
+    color: black;
+}
+
+footer p {
+    text-align: center;
+    font-weight: bold;
 }
